# miniLauncher2

./: .gitignore  .launcher_history  README.md  commands.ini  install.ps1  install.sh  launcher-completion.bash  launcher-completion.ps1  launcher-completion.zsh  launcher.py  mini-launcher.plugin.zsh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: configuracion-ini.md  grabar-demo.md
scripts/: build_unix.sh  build_windows.ps1
tests/: conftest.py  test_completion.py  test_config.py  test_exec_detached.py  test_interactive.py  test_list.py  test_main_cli.py  test_powershell.py  test_run_command.py  test_shell_install.py
